Vector/test/extend/listExtendUnboundedRange.good
listExtendUnboundedRange.chpl:9: error: Cannot extend listng(int(64),true) with unbounded range(int(64),boundedLow,false)
