Vector/test/extend/listExtendUnboundedRange.chpl
private use ListNG;

var lst: listng(int, true);

const r = 1..;

writeln(r.type:string);

lst.extend(r);

